# ai-invention-27ddf1-inequality-political-equality-and-democr

./: README.md
paper_latex/: paper.tex
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  references.bib  refs_to_fetch.json
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-1/dataset-1/src/: .sdk_openhands_agent_struct_out.json  collect_data.py  data.py  data_out_complete.json  data_out_complete_preview.json  data_out_mini.json  data_out_preview.json  data_quality_report.json  dataset_documentation.md  dataset_report.json  full_data_out.json  pyproject.toml
round-1/dataset-1/src/eda_figures/: data_quality_report.txt  eda_correlation_matrix.csv  eda_descriptive_stats.csv
round-1/research-1/: README.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  gmm_specification_example.do  measurement_recommendations.csv  research_out.json  research_report.md
round-2/dataset-1/: README.md
round-2/dataset-1/demo/: data_code_demo.ipynb
round-2/dataset-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  build_dataset_v3.py  data.py  data_out_mini.json  data_out_preview.json  finalize_dataset.py  fix_dataset.py  full_data_out.json  merge_datasets.py  merge_datasets_v2.py  mini_data_out.json  pyproject.toml
round-2/evaluation-1/: README.md
round-2/evaluation-1/demo/: eval_code_demo.ipynb  mini_demo_data.json
round-2/evaluation-1/src/: .sdk_openhands_agent_struct_out.json  complete_evaluation.py  correlations.json  eval.py  eval_out.json  generate_table_and_mediation.py  mediation_analysis.py  mediation_results.json  mini_eval_out.json  missing_data_report.json  preview_eval_out.json  pyproject.toml  table2_apsr.tex  table2_apsr.txt
round-2/experiment-1/: README.md
round-2/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-2/experiment-1/src/: .sdk_openhands_agent_struct_out.json  FINAL_RESULTS_SUMMARY.txt  full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
