[project]
name = "dual-stratification-dataset"
version = "1.0.0"
description = "Dual Stratification Dataset: Post-1990 Democratizers Panel (1990-2024)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "json5>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
