[project]
name = "gen_art_evaluation_1"
version = "0.1.0"
description = "Evaluation artifact for dual stratification hypothesis"
requires-python = ">=3.12"

[project.dependencies]
python = ">=3.12"
numpy = "==2.4.6"
pandas = "==3.0.3"
scipy = "==1.17.1"
statsmodels = "==0.14.6"
loguru = "==0.7.3"
pycountry = "==26.2.16"
linearmodels = "==7.0"
packaging = "==26.2"
pyhdfe = "==0.2.0"
patsy = "==1.0.2"
formulaic = "==1.2.2"
interface-meta = "==2.0.1"
jsonschema = "==4.26.0"
narwhals = "==2.22.1"
wrapt = "==2.2.1"
attrs = "==26.1.0"
mypy-extensions = "==1.1.0"
jsonschema-specifications = "==2025.9.1"
referencing = "==0.37.0"
rpds-py = "==2026.5.1"
python-dateutil = "==2.9.0.post0"
six = "==1.17.0"
typing-extensions = "==4.15.0"
