[project]
name = "dual-stratification-gmm"
version = "0.1.0"
description = "System GMM estimation of dual stratification hypothesis"
requires-python = ">=3.12"
dependencies = [
    "pandas==3.0.3",
    "numpy==2.4.6",
    "statsmodels==0.14.6",
    "linearmodels==7.0",
    "scipy==1.17.1",
    "loguru==0.7.3",
    "pingouin==0.6.1",
    "requests>=2.31.0",
    "pandas-flavor==0.8.1",
]
